# stock-report-linebot

./: .env_example  .gitignore  Dockerfile  docker-compose_example.yml  get_chat_id.py  logger.py  main.py  pyproject.toml
app/controller/: line.py  minio.py  report.py  youtube.py
app/core/: config.py
app/db/: imgur.py  minio.py  report.py  youtube.py
app/model/: line.py  minio.py  model.py  postgresql.py
app/router/: line.py  minio.py  report.py  youtube.py
app/service/: daily_report.py  line.py  llm.py  minio.py  report.py  youtube.py
app/util/: imgur.py  line.py  llm.py  youtube.py
cron_job_scripts/: .env_example  futures_report.sh  hao_report.sh  install_cron_jobs.sh  major_report.sh  margin_report.sh
