[tool.poetry]
name = "stock-linebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
line-bot-sdk = "^3.14.2"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.38"
matplotlib = "^3.10.1"
yfinance = "^0.2.54"
yt-dlp = "^2025.3.21"
google-api-python-client = "^2.165.0"
tiktoken = "^0.9.0"
openai = "^1.68.2"
minio = "^7.2.15"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
